Sonar clean up